Added collisions, life score and game over

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
 
 <body>
+    <h1>LIFE LEFT:</h1><h2 id="life"></h2>
 <div id="container">
 
-<h1>Zombeee</h1>
+
 
 
     </div>
 
-    
+
 <script src="./js/game.js"></script>
 <script src="./js/main.js"></script>
 
