Added bonus collection and score

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 
 <body>
-    <h1>LIFE LEFT:</h1><h2 id="life"></h2>
+    <h1>LIFE LEFT: </h1><h2 id="life"></h2>
+    <h1>SCORE: </h1><h2 id="score"></h2>
 <div id="container">
 
 
